<resources>
    <string name="app_name">MenuMeu</string>

    <!--  HomeActivity  -->
    <string name="add_recipe">Adicionar receita</string>
    <string name="all_recipes">Todas as Receitas</string>
    <string name="create_recipe">criar\nreceita</string>
    <string name="edit_home_screen_w_brk_line">editar\n tela inicial</string>
    <string name="all_breakline_recipes">todas\n as \n receitas</string>
    <string name="search">Buscar</string>
    <string name="success_updating_home_screen">Tela inicial atualizada com sucesso</string>
    <string name="app_logo_koes">App logo: Koes</string>

    <!-- CreateRecipeActivity -->
    <string name="hint_create_recipe_youtube_link">Link do YouTube</string>
    <string name="content_description_search">Pesquisar</string>
    <string name="categories">Categorias:</string>
    <string name="success_saving_recipe">Receita Salva com Sucesso</string>
    <string name="success_updating_recipe">Receita atualizada com sucesso</string>
    <string name="category_removed">categoria removida</string>
    <string name="video_description">Descrição do vídeo</string>
    <string name="categories_selected">Categorias</string>
    <string name="recipe_name">Nome da receita</string>
    <string name="hide_video_description">Ocultar descrição</string>
    <string name="see_entire">Ver completa</string>
    <string name="see_all_recipe">Ver completa</string>
    <string name="get_description">Recuperar descrição</string>
    <string name="ingredients">Ingredientes</string>
    <string name="hide_ingredients">Ocultar ingreditentes</string>
    <string name="get_ingredients">Adicionar ingredientes</string>

    <!-- Generic string -->
    <string name="title">Título</string>
    <string name="description">Descrição</string>
    <string name="favorite">Favoritas</string>
    <string name="breakfest">Café da Manhã</string>
    <string name="lunch">Almoço</string>
    <string name="dinner">Jantar</string>
    <string name="snack">Lanche</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Salvar</string>
    <string name="ok">OK</string>
    <string name="undo">desfazer</string>
    <string name="edit">Editar</string>
    <string name="delete">Excluir</string>
    <string name="category">category</string>

    <!-- RecipeDetailsActivity -->
    <string name="edit_recipe">Editar receita</string>
    <string name="add_to_favorite">Salvar receita nos favoritos</string>
    <string name="recipe_added_to_favorites">Receita adicionada aos favoritos</string>
    <string name="recipe_removed_from_favorites">Receita removida dos favoritos</string>
    <string name="show_description">Mostrar ou Esconder Descrição</string>
    <string name="add_category">Adicionar categoria</string>
    <string name="recipe_details">Detalhes da Receita</string>

    <!-- SearchActivity -->
    <string name="search_results">Resultados da Busca:</string>
    <string name="no_results_found">Nenhum resultado encontrado</string>
    <string name="previous_search">Pesquisas anteriores</string>
    <string name="delete_search_history_entry">delete search history entry</string>

    <!-- CategoryActivity -->
    <string name="confirmation_delete">Tem certeza que deseja excluir esta receita?</string>
    <string name="success_deleting_recipe">Receita excluída com sucesso</string>
    <string name="no_recipe_found">Nenhuma receita encontrada</string>
    <string name="clean_all">limpar todos</string>
    <string name="filters">Filtros</string>
    <string name="added_to_favorites">Receita adicionada aos favoritos</string>
    <string name="removed_from_favorites">Receita removida dos favoritos"</string>
    <string name="favorite_recipes">Receitas favoritas</string>

    <!-- RecipeAdapter -->
    <string name="recipe_image">Imagem da receita</string>
    <string name="searchable">searchable</string>
    <string name="hint_search">Pesquisar receitas salvas</string>
    <string name="category_placeholder">Categoria</string>
    <string name="new_recipe">Nova Receita</string>

    <!-- top app bar -->
    <string name="search_button">Search Button</string>

    <!-- errors -->
    <string name="error_invalid_link">link inválido</string>
    <string name="error_retrieving_information">Erro ao recuperar informações do vídeo</string>
    <string name="error_select_category">Selecione ao menos uma categoria</string>
    <string name="error_conecting_api">Erro ao conectar com API</string>
    <string name="error_insert_title">Insira um título</string>
    <string name="error_saving_recipe">Erro ao salvar receita</string>
    <string name="error_showing_video">Erro na exibição do vídeo</string>
    <string name="error_showing_recipe">Erro em exibir receita</string>
    <string name="error_invalid_name">Nome inválido</string>

    <!-- Add Category Fragment Dialog -->
    <string name="select_categories">Selecione as categorias para a receita:</string>
    <string name="new_category">Nova categoria</string>
    <string name="create_new_category">Criar nova categoria</string>
    <string name="this_action_cannot_undone">Esta ação não pode ser desfeita</string>

    <!-- Home category adapter -->
    <string name="recipe_title">Título da receita</string>
    <string name="category_title">Category Title</string>
    <string name="show_recipes_this_category">Mostrar mais receitas desta categoria</string>

    <!-- EditHomeScreenActivity -->
    <string name="edit_home_screen">Editar tela inicial</string>
    <string name="select_categories_show_home_screen">Selecione as categorias que deseja exibir na tela inicial:</string>

    <!-- AddCategoryDialogFragment -->
    <string name="confirm_delete_category">Confirme que deseja apagar completamente a seguinte categoria:</string>
    <string name="delete_category">Delete Category</string>
</resources>
