<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ScrollViewMainActivity"
    tools:context="joandersongoncalves.example.veganocook.presentation.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />

        <include
            android:id="@+id/appToolbarLayout"
            layout="@layout/app_toolbar" />

        <Button
            android:id="@+id/btAddRecipe"
            style="@style/HomeActivityButton"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:text="@string/add_recipe"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@id/guideline"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@+id/appToolbarLayout" />

        <Button
            android:id="@+id/btAllRecipies"
            style="@style/HomeActivityButton"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:text="@string/all_recipes"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@id/btAddRecipe"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline3" />

        <Button
            android:id="@+id/btFavorites"
            style="@style/HomeActivityButton"
            android:layout_width="0dp"
            android:text="@string/favorite"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/btAddRecipe" />

        <Button
            android:id="@+id/btBreakfest"
            style="@style/HomeActivityButton"
            android:layout_width="0dp"
            android:text="@string/breakfest"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/btFavorites" />

        <Button
            android:id="@+id/btLunch"
            style="@style/HomeActivityButton"
            android:layout_width="0dp"
            android:text="@string/lunch"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/btBreakfest" />

        <Button
            android:id="@+id/btDinner"
            style="@style/HomeActivityButton"
            android:layout_width="0dp"
            android:text="@string/dinner"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/btLunch" />

        <Button
            android:id="@+id/btSnack"
            style="@style/HomeActivityButton"
            android:layout_width="0dp"
            android:text="@string/snack"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/btDinner" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>