<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvFilter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:text="@string/filters"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:background="?android:attr/selectableItemBackground" />

        <Button
            android:id="@+id/btCleanSelectionFiltersDrawer"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingHorizontal="16dp"
            android:background="@drawable/transparent_ripple_no_stroke_background"
            android:gravity="end|center_vertical"
            android:textSize="12sp"
            android:text="@string/clean_all" />

    </LinearLayout>

    <View
        android:id="@+id/dividerFilters"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/categories"
        android:textSize="16sp"
        android:textColor="@color/black" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/flexboxLayoutRecipeFilters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:flexWrap="wrap" />

</LinearLayout>