<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.CreateRecipeActivity"
    android:orientation="vertical">

    <include
        android:id="@+id/appToolbar"
        layout="@layout/app_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/appToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toStartOf="@id/btSearch"
                app:layout_constraintStart_toStartOf="parent"
                app:boxStrokeColor="@color/colorAccent"
                app:hintTextColor="@color/colorAccent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputYoutubeLink"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:inputType="textImeMultiLine"
                    android:hint="@string/hint_create_recipe_youtube_link" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/btSearch"
                style="@style/HomeActivityButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:padding="14dp"
                android:src="@drawable/ic_play_arrow_white_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/textInputLayout"
                app:layout_constraintVertical_bias="1.0"
                android:contentDescription="@string/content_description_search" />

            <ViewFlipper
                android:id="@+id/viewFlipperCreateRecipeActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btSearch"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="16dp">

                <!--Empty Layout for blank screen in ViewFlipper-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        app:boxStrokeColor="@color/colorAccent"
                        app:hintTextColor="@color/colorAccent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textInputTitle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/title" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        app:boxStrokeColor="@color/colorAccent"
                        app:hintTextColor="@color/colorAccent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textInputDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/description"
                            android:lines="7" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="16dp"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="16dp"
                        android:padding="8dp"
                        android:orientation="vertical">

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/chipGroupCategories"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/Widget.MaterialComponents.ChipGroup"
                            app:singleSelection="false">

                            <com.google.android.material.chip.Chip
                                android:id="@+id/chipBreakfast"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/breakfest"
                                android:padding="5dp"
                                style="@style/Widget.MaterialComponents.Chip.Choice"
                                android:textSize="16sp" />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/chipLunch"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/lunch"
                                android:textSize="16sp"
                                style="@style/Widget.MaterialComponents.Chip.Choice"
                                android:background="@color/white" />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/chipDinner"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/dinner"
                                android:textSize="16sp"
                                style="@style/Widget.MaterialComponents.Chip.Choice"
                                app:textStartPadding="8dp" />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/chipSnack"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/snack"
                                style="@style/Widget.MaterialComponents.Chip.Choice"
                                android:textSize="16sp" />

                        </com.google.android.material.chip.ChipGroup>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp">

                        <Button
                            android:id="@+id/btCreateRecipeCancel"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_weight="1"
                            android:layout_marginEnd="8dp"
                            android:layout_gravity="bottom"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:text="@string/cancel" />

                        <Button
                            android:id="@+id/btCreateRecipeSave"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_weight="1"
                            android:layout_marginStart="8dp"
                            android:background="@color/colorAccent"
                            android:layout_gravity="bottom"
                            style="?buttonBarButtonStyle"
                            android:text="@string/save" />

                    </LinearLayout>

                </LinearLayout>
            </ViewFlipper>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</LinearLayout>